# xi-editor

rust/column80-plugin/: Cargo.toml  Makefile  manifest.toml
rust/column80-plugin/src/: main.rs
rust/plugin-lib/src/: view.rs
