[package]
name = "column80-plugin"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Richard Stewing <richard.stewing@udo.edu>"]
repository = "https://github.com/haetze/column80-plugin"
description = "Highlights the 81 character on each line"
edition = '2018'

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.syntect]
git = "https://github.com/trishume/syntect.git"
branch = "master"
default-features = false
features = ["parsing", "yaml-load", "assets","dump-load-rs","dump-create", "metadata"]


[dependencies.xi-plugin-lib]
path = "../plugin-lib"

[dependencies.xi-core-lib]
path = "../core-lib"

[dependencies.xi-rope]
path = "../rope"

[dependencies.xi-trace]
path = "../trace"
